changing p to div

--- a/form.html
+++ b/form.html
@@ -13,23 +13,23 @@
 	<label for="lastname">Last Name:</label>
 	<input type="text" name="lastname" id="lastname" placeholder="Granger" required>
 
-	<p>
+	<div>
 	<label for="man">Male</label>
 	<input type="radio" name="sex" id="man">
 	<label for="woman">Female</label>
 	<input type="radio" name="sex" id="woman">
 	<label for="other">Other</label>
 	<input type="radio" name="sex" id="other">
-	</p>
+	</div>
 
-	<p>
+	<div>
 	<label for="email">Email:</label>
 	<input type="email" name="sex" id="email" placeholder="your email" required>
 	<label for="pwd">Password:</label>
 	<input pattern=".{5,10}" type="password" name="password" id="pwd" required title="5 to 10 characters">			
-	</p>
+	</div>
 
-	<p>
+	<div>
 	Birthday:
 	<select name="month" id="month">
 		<option value="" disabled selected>Month</option>
@@ -76,15 +76,15 @@
 		<option value="November">2004</option>
 		<option value="December">2005</option>				
 	</select>
-	</p>
+	</div>
 
-	<p>
+	<div>
 		<label id="agree">I agree to the terms and conditions</label>
 		<input type="checkbox" name="agree" id="agree" required>
-	</p>
-	<p>
+	</div>
+	<div>
 		<button>Submit</button>
-	</p>
+	</div>
 </form>
 
 </body>
