--- a/purrfectmatch.html
+++ b/purrfectmatch.html
@@ -12,6 +12,8 @@
 
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 
+	<script src="https://kit.fontawesome.com/d312ba7ec3.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
 
@@ -37,8 +39,8 @@
 	      </ul>
 
 	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="#">Sign Up</a></li>
-	        <li><a href="#">Login</a></li>
+	        <li><a href="#">Sign Up <i class="fas fa-user-plus"></i></a></li>
+	        <li><a href="#">Login <i class="fas fa-user"></i></a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
@@ -52,7 +54,7 @@
 					<h1>Purrfect Match</h1>
 					<h3>The online Human-Feline App</h3>
 					<hr>
-					<button class="btn btn-default btn-lg">Get Started!</button>					
+					<button class="btn btn-default btn-lg"><i class="fas fa-paw"></i> Get Started!</button>					
 				</div>
 
 			</div>
