finshing museum of candy

--- a/Bootstrap4_Code/11_Pattern_Project/Starter/index.html
+++ b/Bootstrap4_Code/11_Pattern_Project/Starter/index.html
@@ -39,7 +39,8 @@
 
                 <div class="col-lg-4 mb-4">
                     <div class="card">
-                        <img src="imgs/pattern1.jpeg" class="card-img-top" alt="">
+                        <a href="https://www.facebook.com/">
+                        <img src="imgs/pattern1.jpeg" class="card-img-top" alt=""></a>
                         <div class="card-body">
                             <h5 class="card-title">First thing</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
