--- a/Bootstrap4_Code/13_Museum_Of_Candy/Starter/index.html
+++ b/Bootstrap4_Code/13_Museum_Of_Candy/Starter/index.html
@@ -60,13 +60,13 @@
     </section>
 
     <section class="container-flutter px-0">
-      <div class="row">
+      <div class="row content">
         <div class="col-md-6 order-2 order-md-1">
           <img src="imgs/milk.png" class="img-fluid" alt="">
         </div>
         <div class="col-md-6 text-center order-1 order-md-2 blurb">
           <div class="row justify-content-center">
-            <div class="col-10 col-lg-8">
+            <div class="col-10 col-lg-8 mb-5 mb-md-0">
                 <h2>MUSEUM OF CANDY</h2>
                 <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
                 <p class="lead">Images ifs douane blancs pic roches. Ce endort je empire qu tempes il parler. Souleve ballots exemple jaillir comprit sur eue. Or chez main cime du vint vaut soir. Fabriquer tiendrons eux sinistres mur militaire. Habilement etonnement ca souhaitait consentiez me un ca. Le sa je tristement rougeatres au compagnies frissonner pressentit gourmettes. Sanctifier simplement toi manoeuvres son ces crispation miserables vie fraternite. </p>
@@ -77,11 +77,54 @@
       </div>
     </section>
 
+    <section class="container-flutter px-0">
+        <div class="row content">
+          <div class="col-md-6 text-center blurb">
+            <div class="row justify-content-center">
+              <div class="col-10 col-lg-8 mb-5 mb-md-0">
+                  <h2>MUSEUM OF CANDY</h2>
+                  <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+                  <p class="lead">Images ifs douane blancs pic roches. Ce endort je empire qu tempes il parler. Souleve ballots exemple jaillir comprit sur eue. Or chez main cime du vint vaut soir. Fabriquer tiendrons eux sinistres mur militaire. Habilement etonnement ca souhaitait consentiez me un ca. Le sa je tristement rougeatres au compagnies frissonner pressentit gourmettes. Sanctifier simplement toi manoeuvres son ces crispation miserables vie fraternite. </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+              <img src="imgs/gumball.png" class="img-fluid" alt="">
+            </div>
+        </div>
+      </section>
+
+      <section class="container-flutter px-0">
+          <div class="row content">
+            <div class="col-md-6 order-2 order-md-1">
+              <img src="imgs/sprinkles.png" class="img-fluid" alt="">
+            </div>
+            <div class="col-md-6 text-center order-1 order-md-2 blurb">
+              <div class="row justify-content-center">
+                <div class="col-10 col-lg-8 mb-5 mb-md-0">
+                    <h2>MUSEUM OF CANDY</h2>
+                    <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+                    <p class="lead">Images ifs douane blancs pic roches. Ce endort je empire qu tempes il parler. Souleve ballots exemple jaillir comprit sur eue. Or chez main cime du vint vaut soir. Fabriquer tiendrons eux sinistres mur militaire. Habilement etonnement ca souhaitait consentiez me un ca. Le sa je tristement rougeatres au compagnies frissonner pressentit gourmettes. Sanctifier simplement toi manoeuvres son ces crispation miserables vie fraternite. </p>
+                </div>
+              </div>
+    
+            </div>
+          </div>
+        </section>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    
+    <script>
+        $(function () {
+            $(document).scroll(function () {
+                var $nav = $("#mainNavbar");
+                $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+            });
+        });
+    </script>
   </body>
 </html>
